# gitlab-hooks-api

./: .gitignore  Dockerfile  README.md  dev.py  docker-compose.yml  pyproject.toml
.github/workflows/: docker-build.yml
app/: config.py  connectors.py  main.py
app/database/: webhooks.py
app/services/gitlab/: __init__.py  client.py  exceptions.py
app/triggers/: __init__.py  base.py  gitlab_pipeline.py  openclaw.py
